current listing and sales history dynamic column display

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -230,4 +230,5 @@ w3m-button{
 }
 .auth-page .ant-card .ant-card-grid, .auth-page .ant-card-head {
   background-color: transparent !important;
+  box-shadow: unset !important;
 }
