--- a/src/styles/onboarding.scss
+++ b/src/styles/onboarding.scss
@@ -11,7 +11,7 @@
     right: 0;
     height: 300px; /* This covers the top half */
     //background-image: linear-gradient(to bottom, rgba(20, 20, 20, 0), rgba(20, 20, 20, 0.7), rgba(20, 20, 20, 1)), url('../images/onboardingBackground.jpeg');
-    background-image: linear-gradient(to bottom, rgba(20, 20, 20, 0), rgba(20, 20, 20, 0.8), rgba(20, 20, 20, 1)), url('../images/LenderLabSplash.png');
+    // background-image: linear-gradient(to bottom, rgba(20, 20, 20, 0), rgba(20, 20, 20, 0.8), rgba(20, 20, 20, 1)), url('../images/LenderLabSplash.png');
     background-position-y: 102%;
     background-size: cover;
     background-repeat: no-repeat;
