--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,3 +49,35 @@
 .light .ant-input-outlined.ant-input-disabled {
   @apply text-nomyx-text-light border-nomyx-gray4-light;
 }
+
+
+.light .custom-popover .ant-popover-arrow {
+  --antd-arrow-background-color: #fefefe;
+  margin-top: 1px;
+}
+
+.light .custom-popover .ant-popover-inner {
+  @apply bg-nomyx-dark2-light;
+  border-radius: 8px;
+  padding: 16px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15), 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.dark .custom-popover .ant-popover-arrow {
+  --antd-arrow-background-color: #141414;
+  margin-top: 1px;
+}
+
+.dark .custom-popover .ant-popover-inner {
+  @apply bg-nomyx-dark2-dark;
+  border-radius: 8px;
+  padding: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5), 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.light .ant-table-cell-row-hover {
+  background-color: #f5f5f5 !important; /* Light gray for hover in light mode */
+  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
