--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,3 +81,13 @@
   background-color: #f5f5f5 !important; /* Light gray for hover in light mode */
   transition: background-color 0.3s ease; /* Smooth transition for hover effect */
 }
+.signup-input {
+  @apply shadow placeholder-nomyxGray1 border-nomyxGray1 appearance-none border rounded-sm w-full py-2 px-3 leading-tight bg-nomyxDark2 !text-nomyxWhite;
+  @apply focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500;
+}
+.ant-input-affix-wrapper .anticon.ant-input-password-icon {
+  color: #FFF !important;
+}
+.signup-card .ant-input-affix-wrapper >input.ant-input {
+  color: #FFF !important;
+}
