fixed various minor UI issues

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -194,8 +194,8 @@ w3m-button{
   @apply text-black
 }
 .light .custom-modal .ant-input-outlined {
-  background: #e7e7e7;
-  border-color: #ccc;
+  background: #fff;
+  border-color: #808080;
   color: #000;
 }
 .light .custom-modal .ant-form-item-label >label {
