--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -222,3 +222,7 @@ w3m-button{
   background-color: transparent !important;
   box-shadow: unset !important;
 }
+.ant-statistic-content-value {
+  width: 100% !important;
+  height: 100% !important;
+}
