--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -358,3 +358,6 @@
   background-color: #fff;
   /* border: 1px solid #D1D5DB; */
 }
+.dark .ant-table-pagination-right {
+  background-color: rgb(20, 20, 20);
+}
